objects/Opportunity_Related_Account__c.object
<CustomObject>
    <description>Junction object to allow many-to-many relationships between Opportunity and Account records.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Related Opportunities</relationshipLabel>
        <relationshipName>Opportunity_Related_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Related Accounts</relationshipLabel>
        <relationshipName>Opportunity_Related_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Competitor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Opportunity Related Account</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Opportunity Related Account Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Related Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>